--- a/force-app/main/default/classes/TestClass_EMS_TM_Lock_Previous_Week.cls
+++ b/force-app/main/default/classes/TestClass_EMS_TM_Lock_Previous_Week.cls
@@ -16,7 +16,7 @@ public class TestClass_EMS_TM_Lock_Previous_Week {
         us.LanguageLocaleKey='en_US';
         insert us;
         EMS_Timesheet__c emsts = new EMS_Timesheet__c();
-        emsts.EMS_TM_Status__c='	New';
+        emsts.EMS_TM_Status__c='New';
         emsts.User__c=us.id; 
         emsts.EMS_TM_Mon__c=8;
         emsts.EMS_TM_Tue__c=8;
@@ -24,7 +24,7 @@ public class TestClass_EMS_TM_Lock_Previous_Week {
         emsts.EMS_TM_Thu__c=8;
         emsts.EMS_TM_Fri__c=8;
         emsts.EMS_TM_Sat__c=8;
-        emsts.EMS_TM_Week__c=date.newInstance(2022, 8, 26);
+        emsts.EMS_TM_Week__c=date.newInstance(2023,02,27);
         insert emsts;
         String sch = '0 0 23 * * ?';
         EMS_TM_Lock_Previous_Week tsc = new EMS_TM_Lock_Previous_Week();
@@ -32,24 +32,9 @@ public class TestClass_EMS_TM_Lock_Previous_Week {
 		EMS_TM_Lock_Previous_Week testsche = new EMS_TM_Lock_Previous_Week();		
 		system.schedule('Test status Check', sch, testsche );
 		Test.stopTest();
+          EMS_Timesheet__c timesheetRec =[SELECT Id,EMS_TM_Status__c FROM EMS_Timesheet__c LIMIT 1];
+          System.assertEquals('Locked', timesheetRec.EMS_TM_Status__c);
+          
 	}
-    /*public static testmethod void GetTimeSheetDataTestMethod(){ 
-         Date today = Date.today();
-        EMS_Timesheet__c timesheet;
-        insert timesheet;
-    List<EMS_Timesheet__c> timesheetList = [SELECT Id, EMS_TM_Status__c, EMS_TM_Week__c
-                                                FROM EMS_Timesheet__c
-                                                WHERE EMS_TM_Week__c < :today
-                                                AND EMS_TM_Status__c <> :EMS_TM_GlobalConstants.STATUS_SUBMITTED];
-              
- Test.startTest();
-        timesheet =  [SELECT Id, EMS_TM_Status__c, EMS_TM_Week__c
-                                                FROM EMS_Timesheet__c
-                                                WHERE EMS_TM_Week__c < :today
-                                                AND EMS_TM_Status__c <> :EMS_TM_GlobalConstants.STATUS_SUBMITTED];
 
-		TestClass_EMS_TM_Lock_Previous_Week.GetTimeSheetDataTestMethod();     
-        Test.stopTest();
-     system.assertEquals( timesheet.EMS_TM_Status__c, EMS_TM_GlobalConstants.STATUS_LOCKED); 
-}*/
 }
